logs/prosopopee.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/docopt-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/future'...
Listing './lib/python3.5/site-packages/future/backports'...
Listing './lib/python3.5/site-packages/future/backports/email'...
Listing './lib/python3.5/site-packages/future/backports/email/mime'...
Listing './lib/python3.5/site-packages/future/backports/html'...
Listing './lib/python3.5/site-packages/future/backports/http'...
Listing './lib/python3.5/site-packages/future/backports/test'...
Listing './lib/python3.5/site-packages/future/backports/urllib'...
Listing './lib/python3.5/site-packages/future/backports/xmlrpc'...
Listing './lib/python3.5/site-packages/future/builtins'...
Listing './lib/python3.5/site-packages/future/moves'...
Listing './lib/python3.5/site-packages/future/moves/dbm'...
Listing './lib/python3.5/site-packages/future/moves/html'...
Listing './lib/python3.5/site-packages/future/moves/http'...
Listing './lib/python3.5/site-packages/future/moves/test'...
Listing './lib/python3.5/site-packages/future/moves/tkinter'...
Listing './lib/python3.5/site-packages/future/moves/urllib'...
Listing './lib/python3.5/site-packages/future/moves/xmlrpc'...
Listing './lib/python3.5/site-packages/future/standard_library'...
Listing './lib/python3.5/site-packages/future/tests'...
Listing './lib/python3.5/site-packages/future/types'...
Listing './lib/python3.5/site-packages/future/utils'...
Listing './lib/python3.5/site-packages/future-0.16.0.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/libfuturize'...
Listing './lib/python3.5/site-packages/libfuturize/fixes'...
Listing './lib/python3.5/site-packages/libpasteurize'...
Listing './lib/python3.5/site-packages/libpasteurize/fixes'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/past'...
Listing './lib/python3.5/site-packages/past/builtins'...
Listing './lib/python3.5/site-packages/past/tests'...
Listing './lib/python3.5/site-packages/past/translation'...
Listing './lib/python3.5/site-packages/past/types'...
Listing './lib/python3.5/site-packages/past/utils'...
Listing './lib/python3.5/site-packages/path.py-10.5.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/prosopopee'...
Listing './lib/python3.5/site-packages/prosopopee/themes'...
Listing './lib/python3.5/site-packages/prosopopee/themes/exposure'...
Listing './lib/python3.5/site-packages/prosopopee/themes/exposure/static'...
Listing './lib/python3.5/site-packages/prosopopee/themes/exposure/static/css'...
Listing './lib/python3.5/site-packages/prosopopee/themes/exposure/static/fonts'...
Listing './lib/python3.5/site-packages/prosopopee/themes/exposure/static/img'...
Listing './lib/python3.5/site-packages/prosopopee/themes/exposure/static/js'...
Listing './lib/python3.5/site-packages/prosopopee/themes/exposure/templates'...
Listing './lib/python3.5/site-packages/prosopopee/themes/exposure/templates/sections'...
Listing './lib/python3.5/site-packages/prosopopee/themes/light'...
Listing './lib/python3.5/site-packages/prosopopee/themes/light/static'...
Listing './lib/python3.5/site-packages/prosopopee/themes/light/static/css'...
Listing './lib/python3.5/site-packages/prosopopee/themes/light/static/fonts'...
Listing './lib/python3.5/site-packages/prosopopee/themes/light/static/img'...
Listing './lib/python3.5/site-packages/prosopopee/themes/light/static/js'...
Listing './lib/python3.5/site-packages/prosopopee/themes/light/templates'...
Listing './lib/python3.5/site-packages/prosopopee/themes/light/templates/sections'...
Listing './lib/python3.5/site-packages/prosopopee/themes/material'...
Listing './lib/python3.5/site-packages/prosopopee/themes/material/static'...
Listing './lib/python3.5/site-packages/prosopopee/themes/material/static/css'...
Listing './lib/python3.5/site-packages/prosopopee/themes/material/static/fonts'...
Listing './lib/python3.5/site-packages/prosopopee/themes/material/static/img'...
Listing './lib/python3.5/site-packages/prosopopee/themes/material/static/js'...
Listing './lib/python3.5/site-packages/prosopopee/themes/material/templates'...
Listing './lib/python3.5/site-packages/prosopopee/themes/material/templates/sections'...
Listing './lib/python3.5/site-packages/prosopopee-0.7.dist-info'...
Listing './lib/python3.5/site-packages/ruamel'...
Listing './lib/python3.5/site-packages/ruamel/yaml'...
Listing './lib/python3.5/site-packages/ruamel.yaml-0.15.35.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
